Olympus/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSFE_Age__c</fullName>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSFE_Assign_Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSFE_Campaign__c</fullName>
        <label>Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Cap_amount__c</fullName>
        <label>Estimated Capital Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HSFE_Combination_Key__c</fullName>
        <description>This is used to query on Zip To Territory table.</description>
        <formula>LEFT(PostalCode,5)+ Text(HSFE_Specialty__c)+ Text(HSFE_Sub_Speciality__c)</formula>
        <label>Combination Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Contract_Expiration__c</fullName>
        <label>Contract Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSFE_Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Contract_Value__c</fullName>
        <label>Contract Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSFE_Covered_By__c</fullName>
        <label>Covered By</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Created_Date_Difference__c</fullName>
        <formula>(NOW() - CreatedDate)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSFE_Discipline__c</fullName>
        <label>Discipline</label>
        <picklist>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anesthesiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GYN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopedic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulmonary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respiratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thoracic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UR-GY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vascular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterinary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Disposables_Total__c</fullName>
        <description>Is an input into opportunity amount</description>
        <label>Estimated Disposables Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HSFE_Ex_Territory_Assignment_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to check the rule will run automatically or not.</description>
        <label>Exclude Territory Assignment Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSFE_Exception_Combination_Key__c</fullName>
        <formula>HSFE_SAP_ID__c + LEFT(PostalCode,5)+ Text(HSFE_Specialty__c)+ Text(HSFE_Sub_Speciality__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exception Combination Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Expected_Close_Date__c</fullName>
        <label>Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSFE_IMS_ID__c</fullName>
        <label>IMS ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_IP_Address__c</fullName>
        <description>Captures the IP address from web leads</description>
        <label>IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_IsImported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSFE_JDE_Number__c</fullName>
        <label>JDE Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>application backend Id</description>
        <externalId>true</externalId>
        <label>HSFE Legacy Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HSFE_Literature_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Literature Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSFE_My_Territory__c</fullName>
        <description>This is used to find the related territory.</description>
        <formula>IF(CONTAINS(HSFE_Territory_User__c,$User.Id ), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSFE_Opportunity_Amount__c</fullName>
        <formula>HSFE_Cap_amount__c  +  HSFE_Service_Total__c  +  HSFE_Disposables_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HSFE_Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSG Portal(Website)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIS Contracts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Other_City__c</fullName>
        <label>Other City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Other_Country__c</fullName>
        <label>Other Country</label>
        <picklist>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Arab Emirates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saint Barthélemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Other_State_Provice__c</fullName>
        <label>Other State/Provice</label>
        <picklist>
            <controllingField>HSFE_Other_Country__c</controllingField>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Carolina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Dakota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Other_Street__c</fullName>
        <label>Other Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSFE_Other_Zip_Postal_Code__c</fullName>
        <label>Other Zip/Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Override_Assignment_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Assignment Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSFE_Product_Interest__c</fullName>
        <label>Product Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Reassignment_Date__c</fullName>
        <label>Reassignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSFE_Reassignment__c</fullName>
        <label>Reassignment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSFE_Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Current Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DONOTUSE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Reminder_Date__c</fullName>
        <label>Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSFE_Reminder__c</fullName>
        <label>Reminder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSFE_SAP_ID__c</fullName>
        <label>SAP ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Sales_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Partner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSFE_Service_Contract_Details__c</fullName>
        <label>Service Contract Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSFE_Service_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSFE_Service_Total__c</fullName>
        <description>Is an input into opportunity amount</description>
        <label>Estimated Service Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HSFE_Specialty__c</fullName>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Strategy__c</fullName>
        <description>Free text</description>
        <label>Strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Sub_Origin__c</fullName>
        <label>Sub Origin</label>
        <picklist>
            <controllingField>HSFE_Origin__c</controllingField>
            <picklistValues>
                <fullName>AAO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASCRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AORN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAGL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAGES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk Filter Promo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Sub_Speciality__c</fullName>
        <label>Sub Specialty</label>
        <picklist>
            <controllingField>HSFE_Specialty__c</controllingField>
            <picklistValues>
                <fullName>Endoscopy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical Endoscopy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology/Gynecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EndoCapsule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical AVI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Sugar_ID__c</fullName>
        <label>Sugar ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Territory_User__c</fullName>
        <label>Territory User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSFE_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>HSEF_Territory__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSFE_Time__c</fullName>
        <description>Captures the time field from web leads</description>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSFE_Tradeshow_Date__c</fullName>
        <label>Tradeshow Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSFE_UID__c</fullName>
        <description>Universal ID</description>
        <label>UID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Username__c</fullName>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Reports_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reports to</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>HSFE_Specialty__c</columns>
        <columns>HSFE_Sub_Speciality__c</columns>
        <columns>HSFE_Product_Interest__c</columns>
        <columns>HSFE_Age__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>HSFE_Leads_In_My_Territory</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>HSFE_Specialty__c</columns>
        <columns>HSFE_Sub_Speciality__c</columns>
        <columns>HSFE_Product_Interest__c</columns>
        <columns>HSFE_Age__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HSFE_My_Territory__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Leads In My Territory</label>
    </listViews>
    <listViews>
        <fullName>Imported_Leads_in_last_24_Hours</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>HSFE_Specialty__c</columns>
        <columns>HSFE_Sub_Speciality__c</columns>
        <columns>HSFE_Product_Interest__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>HSFE_Created_Date_Difference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HSFE_Created_Date_Difference__c</field>
            <operation>lessOrEqual</operation>
            <value>24</value>
        </filters>
        <filters>
            <field>HSFE_IsImported__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Imported Leads in last 24 Hours</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>HSFE_Specialty__c</columns>
        <columns>HSFE_Sub_Speciality__c</columns>
        <columns>HSFE_Product_Interest__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>HSFE_Specialty__c</columns>
        <columns>HSFE_Sub_Speciality__c</columns>
        <columns>HSFE_Product_Interest__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>HSFE_Specialty__c</columns>
        <columns>HSFE_Sub_Speciality__c</columns>
        <columns>HSFE_Product_Interest__c</columns>
        <columns>HSFE_Age__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Reject_Reason_mandatory_on_Lead_Reject</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT( Status ) = &apos;Rejected&apos;  &amp;&amp;  TEXT(HSFE_Reject_Reason__c) =  null</errorConditionFormula>
        <errorDisplayField>HSFE_Reject_Reason__c</errorDisplayField>
        <errorMessage>Reject reason is mandatory when Lead is rejected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_fields_for_lead_conversion</fullName>
        <active>true</active>
        <description>Specialty, Sub-specialty, Expected Close Date, Zip Code on Primary Address on required for lead conversion, please click cancel and update the fields before conversion.
|| ISBLANK(PostalCode)</description>
        <errorConditionFormula>(IsConverted)&amp;&amp; (ISBLANK(TEXT(HSFE_Specialty__c )) || 
ISBLANK(TEXT(HSFE_Sub_Speciality__c)) || ISBLANK(PostalCode)  || ISBLaNK(HSFE_Expected_Close_Date__c))</errorConditionFormula>
        <errorMessage>Specialty, Sub-specialty, Expected Close Date, Zip Code on Primary Address is required for lead conversion, please click cancel and update the fields before conversion.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_manual_update_of_status_to_conv</fullName>
        <active>true</active>
        <description>Validation to restrict user form  manually change lead status to converted.</description>
        <errorConditionFormula>ISPICKVAL( Status , &apos;Converted&apos;) &amp;&amp;NOT(IsConverted)</errorConditionFormula>
        <errorMessage>Lead status cannot be changed to converted. Please click Convert button to convert the lead</errorMessage>
    </validationRules>
</CustomObject>